--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -12,3 +12,8 @@
   title: 02. Псевдоними, низове, композирани типове
   date: 2017-10-11
   slug: 02-references-strings-compound-types
+
+3:
+  title: 03. Още за &низове и структури
+  date: 2017-10-13
+  slug: 03-strings-structs
