--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -17,3 +17,8 @@
   title: 03. Още за &низове и структури
   date: 2017-10-13
   slug: 03-strings-structs
+
+4:
+  title: 04. Модули и тестване
+  date: 2017-10-18
+  slug: 04-modules-and-testing
