--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -22,3 +22,8 @@
   title: 04. Модули и тестване
   date: 2017-10-18
   slug: 04-modules-and-testing
+
+5:
+  title: 05. Изброени типове и съпоставяне на образци
+  date: 2017-10-20
+  slug: 05-enums-and-pattern-matching
