--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -32,3 +32,8 @@
   title: 06. Шаблонни типове, типажи
   date: 2017-10-25
   slug: 06-generics-traits
+
+7:
+  title: 07. Често срещани trait-ове
+  date: 2017-10-27
+  slug: 07-common-traits
