--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -37,3 +37,8 @@
   title: 07. Често срещани trait-ове
   date: 2017-10-27
   slug: 07-common-traits
+
+8:
+  title: 08. Lifetimes
+  date: 2017-11-03
+  slug: 08-lifetimes
