--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -42,3 +42,8 @@
   title: 08. Lifetimes
   date: 2017-11-03
   slug: 08-lifetimes
+
+9:
+  title: 09. Конвертиране на типове, итератори
+  date: 2017-11-08
+  slug: 09-conversions-iterators
