--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -47,3 +47,8 @@
   title: 09. Конвертиране на типове, итератори
   date: 2017-11-08
   slug: 09-conversions-iterators
+
+10:
+  title: 10. Справяне с грешки
+  date: 2017-11-10
+  slug: 10-error-handling
