--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -52,3 +52,8 @@
   title: 10. Справяне с грешки
   date: 2017-11-10
   slug: 10-error-handling
+
+11:
+  title: 11. Умни указатели
+  date: 2017-11-15
+  slug: 11-smart-pointers
