--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -57,3 +57,8 @@
   title: 11. Умни указатели
   date: 2017-11-15
   slug: 11-smart-pointers
+
+12:
+  title: 12. Умни указатели, втори дубъл
+  date: 2017-11-17
+  slug: 12-smart-pointers-part-2
