Lecture 13: live demo notes

--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -62,3 +62,13 @@
   title: 12. Умни указатели, втори дубъл
   date: 2017-11-17
   slug: 12-smart-pointers-part-2
+
+13:
+  title: 13. Твърде много списъци (live demo), част 1
+  date: 2017-11-22
+  slug: 13-too-many-linked-lists-part-1
+
+14:
+  title: 14. Твърде много списъци (live demo), част 2
+  date: 2017-11-24
+  slug: 14-too-many-linked-lists-part-2
