--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -72,3 +72,8 @@
   title: 14. Твърде много списъци (live demo), част 2
   date: 2017-11-24
   slug: 14-too-many-linked-lists-part-2
+
+15:
+  title: 15. Функции, closures
+  date: 2017-11-29
+  slug: 15-closures
