--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -77,3 +77,8 @@
   title: 15. Функции, closures
   date: 2017-11-29
   slug: 15-closures
+
+16:
+  title: 16. Нишки
+  date: 2017-12-01
+  slug: 16-threads
