--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -87,3 +87,8 @@
   title: 17. Канали
   date: 2017-12-06
   slug: 17-channels
+
+18:
+  title: "18. Външни зависимости: пакети, данни"
+  date: 2017-12-13
+  slug: 18-dependencies
