--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -89,6 +89,6 @@
   slug: 17-channels
 
 18:
-  title: "18. Външни зависимости: пакети, данни"
+  title: "18. Външни зависимости: пакети, данни (live demo)"
   date: 2017-12-13
   slug: 18-dependencies
