--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -102,3 +102,8 @@
   title: "20. FFI"
   date: 2017-12-20
   slug: 20-ffi
+
+21:
+  title: "21. Идея за проект : интерпретатор"
+  date: 2018-01-03
+  slug: 21-project-idea-interpreter
