--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -112,3 +112,13 @@
   title: "22. Идея за проект: игра"
   date: 2018-01-05
   slug: 22-project-idea-game
+
+23:
+  title: "23. Идея за проект: уебсайт"
+  date: 2018-01-10
+  slug: 23-project-idea-website
+
+24:
+  title: "24. Идея за проект: search engine"
+  date: 2018-01-12
+  slug: 24-project-idea-search-engine
