--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -122,3 +122,8 @@
   title: "24. Идея за проект: search engine"
   date: 2018-01-12
   slug: 24-project-idea-search-engine
+
+26:
+  title: "26. Последна лекция"
+  date: 2018-01-19
+  slug: 26-final
