--- a/lectures/index.yml
+++ b/lectures/index.yml
@@ -123,6 +123,11 @@
   date: 2018-01-12
   slug: 24-project-idea-search-engine
 
+25:
+  title: "25. Lock-free алгоритми"
+  date: 2018-01-17
+  slug: 25-lock-free
+
 26:
   title: "26. Последна лекция"
   date: 2018-01-19
